# coreNLP

./: .gitignore  LICENSE  README.md  coreNLP.cabal  stack.yaml
app/: Main.hs
src/: CoreNLP.hs
src/CoreNLP/: Annotators.hs  NER.hs  OutputFormat.hs  Sentence.hs  THUtil.hs  Token.hs  Util.hs
test/: Test01Spec.hs
texts/: picture01.txt
