name:                coreNLP
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tkemps/coreNLP#readme
license:             BSD3
license-file:        LICENSE
author:              Torsten Kemps-Benedix
maintainer:          tkx68@icloud.com
copyright:           Torsten Kemps-Benedix, 2019
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     CoreNLP, CoreNLP.OutputFormat, CoreNLP.Annotators, CoreNLP.Sentence, CoreNLP.NER, CoreNLP.Token, CoreNLP.THUtil
  other-modules:       CoreNLP.Util
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       servant, servant-client, servant-server,
                       http-client,
                       aeson, aeson-compat,
                       attoparsec,
                       bytestring, text,
                       blaze-html, blaze-markup,
                       wai, warp,
                       mtl,
                       prettyprinter

executable x1
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       servant, servant-client, servant-server,
                       http-client,
                       aeson, aeson-compat,
                       attoparsec,
                       bytestring, text,
                       blaze-html, blaze-markup,
                       wai, warp,
                       mtl,
                       prettyprinter,
                       coreNLP
